--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=RaiseTechManagement
 spring.datasource.url=jdbc:mysql://localhost:3306/raisetech
-spring.datasource.username=root
-spring.datasource.password=udedamepon175!
+spring.datasource.username=username
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
